# py_checkmem

./: Readme.md  checkmem.py  pyproject.toml
checkmem/: checkmem.py  memory.py  termination.py
checkmem/tests/: test_memory.py
src/checkmem/: checkmem.py  memory.py  run.py  termination.py
src/checkmem/tests/: test_memory.py
